[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Mozilla tutorial authors"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://developer.mozilla.org/en-US/docs/WebAssembly/Rust_to_Wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

